--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -50,15 +50,15 @@ tags: []
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-先看第一句，“期望”如何流于“批判”，难道作者对未来的“期盼”就是批判老观念？从上下文推测似乎不是这样；而这期望又如何走向虚无与达达二主义，难道作者期望成为虚无主义者？从上下文推断似乎也不像。坦白说，这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当自己未来的理想和家庭与社会对自己的期许间有了分歧，且这分歧阻碍了自己追求理想，那自己心中容易生出的不满，由此对阻扰自己的老观念加以批判，并让自己滑向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成还是第三局？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
+先看第一句，“期望”如何流于“批判”，难道作者对未来的“期盼”就是批判老观念？从上下文推测似乎不是这样；而这期望又如何走向虚无与达达二主义，难道作者期望成为虚无主义者？从上下文推断似乎也不像。坦白说，这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思应该是：当自己未来的理想和家庭与社会对自己的期许间有了分歧，且这分歧阻碍了自己追求理想，那自己心中容易生出的不满，由此对阻扰自己的老观念加以批判，并让自己滑向虚无与达达主义。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？这句话也不容易看懂，我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些行为是由于感到了理想与现实间的落差造成的，事出有因，但这不能成为做出那些行为的理由。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
 > 社会与家庭暂且被我们把握为一个薄脊的符号客体，一定程度上是因为我们尚缺乏体验与阅历去支撑自己的认知。而这种偏见的傲慢更远在知性的傲慢之上。　  
 
-来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。不仅“薄脊”一句看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用这样的词是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
+来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。这段话里，不仅“薄脊”一词我看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用这样的词是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
 
-写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱的词语搭配接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”观念就是观念，按某观念的指导行动，才叫实践；我们可以实践某观念，但观念不能是“实践的”，除非作者重新定义这个形容词。再下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
+写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱搭配的词接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”观念就是观念，遵循某观念的指导行动，才叫实践；我们可以实践某观念，但观念不能是“实践的”，除非作者重新定义这个形容词。再下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
 
 唉，又熬过了一段，不容易。可刚松口气，低头一看，下一段胡言乱语又来了：
 
@@ -66,11 +66,11 @@ tags: []
 
 “觇”就是看的意思，别笑，我是上网搜出来的。我真不明白写这么个奇怪的字来表达一个这么直白的意思，有必要吗？而且就算先不问为啥要用这个生僻字，光说句子，这第一句读得通吗？给这位同学满分的几位老师，要不你们出来把这句话翻译一下？还有，既然是“从家庭与社会角度一觇”，那看到的还能叫自我吗？那不是别人眼中的“我”吗？下边第二句，啥叫不是摒弃“批判”，而是摒弃“批判的廉价”？难道是说批判就批判，咱不谈价格？或者说之前的批判卖便宜了，得加点价才有资格被留下来，不摒弃？当然，也别问啥叫“对批判投诚中的反智倾向”，问就是“量子力学”。   
 
-至于作者在这段里引用尼采的话，我不评判。不是因为他用得对，而是用得连错都算不算上。“永远重复”这几个字是从哪儿蹦出来？尼采的“永恒轮回”吗？为什么用在这里？理解“永恒轮回”的意思吗？    
+至于作者在这段里引用尼采的话是否用对了地方，我不作具体分析。不是因为他用得对，而是用得连错都算不算上。“永远重复”这几个字是从哪儿蹦出来？尼采的“永恒轮回”吗？为什么用在这里？理解“永恒轮回”的意思吗？    
 
 这文章看着难过，但看到只剩两段了，心中稍喜，继续吧。   
 
-和前头那些难读的硬骨头们相比，倒数第二段写得算是“平平无奇”，只是维特根斯坦出现得略显尴尬。“对无法言说之事保持沉默”，我想，作者如果真理解这句话的意思，那就不会造成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。    
+和前头那些难读的硬骨头们相比，倒数第二段写得算是“平平无奇”，只是维特根斯坦出现得略显尴尬。“对无法言说之事保持沉默”，我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。    
 
 最后一段。   
 
@@ -78,7 +78,7 @@ tags: []
 
 终于捋完了。
 
-这样一篇矫揉造作，滥用词语，多数句子不通的文章为何能得满分，我实在想不通。阅卷老师难道是被海德格尔，维特根斯坦给吓到了？还是作者便秘式的文风让老师们心生同情，觉得生活已经如此艰难，大家就不要再拆穿？都不容易，这样烂的文章拿满分，这对其它考生公平吗？这样的文章若被当作“好”东西宣传，被不谙世事的低年级学生模仿，带出一帮子怪胎文章，这个责任谁来负？这位作者把文章写成这样可能是他性格和能力的问题，其过不大；但阅卷老师把这种文章推出来表彰、讨论，居心何在？
+这样一篇矫揉造作，滥用词语，多数句子不通的文章为何能得满分，我实在想不通。阅卷老师难道是被海德格尔，维特根斯坦给吓到了？还是作者便秘式的文风让老师们心生同情，觉得生活已经如此艰难，大家就不要再拆穿？大家都不容易，这样烂的文章拿满分，这对其它考生公平吗？这样的文章若被当作“好”东西宣传，被不谙世事的低年级学生模仿，带出一帮子怪胎文章，这个责任谁来负？这位作者把文章写成这样可能是他性格和能力的问题，其过不大；但阅卷老师把这种文章推出来表彰、讨论，居心何在？
 
 
 
