--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -70,7 +70,7 @@ tags: []
 
 这文章看着难过，但看到只剩两段了，心中稍喜，继续吧。   
 
-和前头那些难读的硬骨头们相比，倒数第二段写得算是“平平无奇”，只是维特根斯坦出现得略显尴尬。“对无法言说之事保持沉默”，我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。    
+和前头那些难读的硬骨头们相比，倒数第二段写得算是“平平无奇”，只是维特根斯坦出现得略显尴尬。“对无法言说之事保持沉默”，我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。不管维特根斯坦的原话是什么意思，可以确定的是它肯定不是作者表达出来的那个意思。当然，我国自古有对引用语断章取义的传统，用现代的说法，这叫创造性地背离。但我想这样的“背离”是有前提的，即需理解字句的原义，然后再稍加发挥。望文生义地乱用容易闹笑话。       
 
 最后一段。   
 
