--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -50,7 +50,7 @@ tags: []
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-先看第一句，“期望”如何流于“批判”，难道作者对未来的“期盼”就是批判老观念？从上下文推测似乎不是这样；而这期望又如何走向虚无与达达二主义，难道作者原本期望成为虚无主义者？从上下文推断似乎也不像。坦白说，这种行文简直让然摸不着头脑。细分析这句话，我想作者要表达的意思可能是：当自己未来的理想和家庭与社会对自己的期许间有了分歧，且这分歧阻碍了自己追求理想，那自己心中容易生出的不满，由此对阻扰自己的老观念加以批判与否定，并叛逆地滑向虚无与达达主义。当然，这话也可能是在说人不能心高气傲，看啥沾地气的都看不惯，老想着往非主流里钻。看，话要是说不清楚，现代文看起来不比古文省力。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话谁看得懂？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。这话还有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
+坦白说，这种行文简直让然摸不着头脑。细分析这句话，我想作者可能是在说人不能心高气傲，看啥沾地气的都看不惯，老想着往非主流里钻。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话谁看得懂？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。这话还有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
