--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -50,7 +50,7 @@ tags: []
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-这行文让人摸不着头脑。先看第一句，细分析这话，我想作者可能是在说人不能太心高气傲，看啥沾地气的都看不惯，老想着往非主流里钻。这文字有些突兀，要想理解，最好假设面前有站着一个自命不凡，与周围的世界格格不入的年轻人，然后看他如何劝解自己与这个世界妥协。至于一个追求“超越性”如何走向虚无与达达主义，这令人颇费解。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，本来它们就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话谁看得懂？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。这话还有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
+这行文让人摸不着头脑。先看第一句，细分析这话，我想作者可能是说人不能太心高气傲，别看啥沾地气的都看不惯，也别老想着往非主流里钻。这文字有些突兀，为帮助理解，最好假设面前站着一个自命不凡，与周围的世界格格不入的年轻人，正用以上话语劝解自己与这个世界妥协。至于一个追求“超越性”的人如何走向虚无与达达主义，我不理解。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，它们本来就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话谁看得懂？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。这话另有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
@@ -64,13 +64,13 @@ tags: []
 
 > 毫无疑问，从家庭与社会角度一觇的自我有偏狭过时的成分。但我们所应摒弃的不是对此的批判，而是其批判的廉价，其对批判投诚中的反智倾向。   
 
-“觇”就是看的意思，别笑，我是上网搜出来的。我真不明白写这么个奇怪的字来表达一个这么直白的意思，有必要吗？而且就算先不问为啥要用这个生僻字，光说句子，这第一句读得通吗？给这位同学满分的几位老师，要不你们出来把这句话翻译一下？还有，既然是“从家庭与社会角度一觇”，那看到的还能叫自我吗？那不是别人眼中的“我”吗？下边第二句，啥叫不是摒弃“批判”，而是摒弃“批判的廉价”？难道是说批判就批判，咱不谈价格？或者说之前的批判卖便宜了，得加点价才有资格被留下来，不摒弃？当然，也别问啥叫“对批判投诚中的反智倾向”，问就是“量子力学”。   
+“觇”就是看的意思，别笑，我是上网搜出来的。我真不明白写这么个奇怪的字来表达一个这么直白的意思，有必要吗？而且就算先不问为啥要用这个生僻字，光说句子，这第一句读得通吗？给这位同学满分的几位老师，要不你们出来把这句话翻译一下？还有，既然是“从家庭与社会角度一觇”，那看到的还能叫自我吗？那不是别人眼中的“我”吗？下边第二句，啥叫不是摒弃“批判”，而是摒弃“批判的廉价”？难道是说批判就批判，咱不谈价格？或者说之前的批判卖便宜了，得加点价才有资格被留下来，不摒弃？想其所谓，大概是说不是不让批判，只是别张嘴就来，瞎批判吧。当然，也别问啥叫“对批判投诚中的反智倾向”，问就是“量子力学”。   
 
 至于作者在这段里引用尼采的话是否用对了地方，我不作具体分析。不是因为他用得对，而是用得连错都算不算上。“永远重复”这几个字是从哪儿蹦出来？尼采的“永恒轮回”吗？为什么用在这里？理解“永恒轮回”的意思吗？    
 
 这文章看着难过，但看到只剩两段了，心中稍喜，继续吧。   
 
-和前头那些难读的硬骨头们相比，倒数第二段写得算是“平平无奇”，只是维特根斯坦出现得略显尴尬。“对无法言说之事保持沉默”，我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。不管维特根斯坦的原话是什么意思，可以确定的是它肯定不是作者表达出来的那个意思。当然，我国自古有对引用语断章取义的传统，用现代的说法，这叫创造性地背离。但我想这样的“背离”是有前提的，即需理解字句的原义，然后再稍加发挥。望文生义地乱用容易闹笑话。       
+和前头那些难读的硬骨头们相比，倒数第二段写得还算“平平无奇”。第一句：“蓝图上的落差终归只是理念上的区分，在实践场域的分野也未必明晰。”和前面很多话一样，这话也是初看不懂，再看似乎有点意思---汉字都认识，连起来却成了似曾相识，你看人家这功力！但真的有意思吗？落差只是区分？怎么解？我猜这话的前半句大概是说：自己对未来的规划和家庭、社会对自己的期许间有分歧，这分歧源自（哈哈，这里可用“滥觞于”了）彼此想法的不同；后半句是说啥呢？啥叫“实践场域的分野”？场域就是领域，不过在社会学上有人以它为基础搞出了套理论；分野其实是个日语词，在中文里我很少见它，其在日语里的意思还是领域。这样一来，这话的后半句其实也是不通的，什么叫“实践领域的领域也未必分明”？中间“涉足”权力那段莫名其妙，在我看来是略带癫狂的呓语，跳过吧。“对无法言说之事保持沉默”，这里维特根斯坦出现得略显尴尬。我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。不管维特根斯坦的原话是什么意思，可以确定的是它肯定不是作者表达出来的那个意思。当然，我国自古有对引用语断章取义的传统，用现代的说法，这叫创造性地背离。但我想这样的“背离”是有前提的，即需理解字句的原义，然后再稍加发挥。望文生义地乱用容易闹笑话。       
 
 最后一段。   
 
