--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -74,11 +74,16 @@ tags: []
 
 最后一段。   
 
-如果不纠结何为“婞直”（其实就是倔强），何为“单向度”（其实就是无批判精神），也不问为何“遗世独立”就成了“单向度形象”（“遗世独立”和“单向度”间隔了十万八千里，怎么放一起去的？），那最后一段也不算难懂；但若是要纠结，那这一段也形同天书了。好在作者在字里行间多少还留了些余地给我们喘息，这大概就是作者的“温柔”吧。    
+如果不纠结何为“婞直”（其实就是倔强），何为“单向度”（其实就是无批判精神），也不问为何“遗世独立”就成了“单向度形象”（“遗世独立”和“单向度”间隔了十万八千里，怎么放一起去的？），那最后一段也不算难懂；但若是要纠结，那这一段也形同天书了[^1]。好在作者在字里行间多少还留了些余地给我们喘息，这大概就是作者的“温柔”吧。    
 
 终于捋完了。
 
 这样一篇矫揉造作，滥用词语，多数句子不通的文章为何能得满分，我实在想不通。阅卷老师难道是被海德格尔，维特根斯坦给吓到了？还是作者便秘式的文风让老师们心生同情，觉得生活已经如此艰难，大家就不要再拆穿？大家都不容易，这样烂的文章拿满分，这对其它考生公平吗？这样的文章若被当作“好”东西宣传，被不谙世事的低年级学生模仿，带出一帮子怪胎文章，这个责任谁来负？这位作者把文章写成这样可能是他性格和能力的问题，其过不大；但阅卷老师把这种文章推出来表彰、讨论，居心何在？
+
+
+
+[^1]: 其实这一段里还有个硬骨头，即“理想期望范式”。根据前后文，卡尔维诺在书中描写的是一种生活方式（不是什么期望范式，期望就是期望，期望还有范式！？），这种方式在自己的期望与现实的分歧间找到了一个平衡点。“范式”这种大词容易让使用它的人产生一种无聊的优越感，这时候不是人在掌握词语，而是人以词贵，词在用人。
+
 
 
 
