--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -32,31 +32,31 @@ tags: []
 
 拿了满分的就是这篇文章。  
 
-这篇文章用了很多生僻的字词，行文晦涩，还引了几个听起来很厉害的人的话---这种让人一看不懂，再看似乎有点道理的东西很唬人。我们费点神把这文章捋一捋吧。   
+这篇文章用了很多生僻的字词，行文晦涩，还引了几个听起来很厉害的人的话---这种让人一看不懂，再看似乎有点道理的东西很唬人。其内容如何？让我们费点神来捋一捋。   
 
-文章用“现代社会以海德格尔的一句‘一切实践传统都已经瓦解完了’为嚆矢”开篇。这语气肯定，自信，不容辩驳，还搬出了海德格尔这么一个大神站台，吓得一些读者不敢动弹。开句本已霸气侧漏，再用“嚆矢”这两个很多人不认识的字结尾，这第一句话就击溃了很多人的心里防线，让这文章在他们眼里自带光环---也就是“俗称”的“赋魅”了。随便一开头就有如此乾坤景象，让人惊叹；不过，朋友们，别将惊讶太早用完，这才是第一句呐。   
+文章用“现代社会以海德格尔的一句‘一切实践传统都已经瓦解完了’为嚆矢”开篇。这语气肯定，自信，不容辩驳，还搬出了海德格尔这么一个大神站台，立刻就吓得一些读者不敢动弹。开句本已霸气侧漏，再用“嚆矢”这两个很多人不认识的字结尾，这第一句话就击溃了很多人的心里防线，让这文章在他们眼里自带光环---也就是“俗称”的“赋魅”了。随便一开头就有如此乾坤景象，让人惊叹；不过，朋友们，别将惊讶太早用完，这才是第一句呐。   
 
-不过，如果在震惊之于我们还有空想一想，那问题就来了：海德格尔说过这句话吗？我多少看过些海德格尔的文字，就没想起来有这么一句。虽然可能是我读书少，但我想这至少是可以存疑的吧。看下去，“嚆矢”是啥？一查，其实就是能发出响声的箭。由于声速比箭速快，所以这种箭发出时，人们一般都是耳朵先听到响，然后屁股才感到疼，所以以喻“先声”。这词我在日语里见过，还真没有印象谁在中文写作里用过它。我太孤陋寡味了吧。   
+如果在震惊之于我们还有空想一想，那问题就来了：海德格尔说过这句话吗？我多少看过些海德格尔的文字，就没想起来有这么一句。虽然可能是我读书少，但我想这至少是可以存疑的吧。看下去，“嚆矢”是啥？一查，其实就是能发出响声的箭。由于声速比箭速快，所以这种箭发出时，人们一般都是耳朵先听到响，然后屁股才感到疼，所以以喻“先声”。这词我在日语里见过，还真没有印象谁在中文写作里用过它。我太孤陋寡味了。   
 
-看完第一句，惊魂还未定，第二句又来了：“滥觞于家庭与社会传统的期望正失去它们的借鉴意义。”滥觞啥？一查，哦，是“起源”的意思啊。好吧，咱读书少，咱认。但自个儿惭愧完了一想，好像有点~~妖气~~问题。啥叫“起源于”家庭和社会的期望？直接说“家庭和社会的期望”不行吗？若是非要强调这期望的“出处”，那写成“来自家庭与社会的期望”如何？作者的这种写法在我看来跟把水称作一氧化二氢没啥区别，就是不说人话。      
+看完第一句，惊魂还未定，第二句又来了：“滥觞于家庭与社会传统的期望正失去它们的借鉴意义。”滥觞是啥？一查，哦，是“起源”的意思啊。好吧，咱读书少，咱认。但自个儿惭愧完了一想，好像有点~~妖气~~问题。啥叫“起源于”家庭和社会的期望？直接说“家庭和社会的期望”不行吗？若是非要强调这期望的“出处”，那写成“来自家庭与社会的期望”如何？作者的这种写法在我看来跟把水称作一氧化二氢没啥区别，就是不说人话。      
 
-“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来，其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。文章除了要达意，音韵美也是要顾一下的，大家发声读读这句话，难受不？     
+“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来。其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。表达这么简单个意思却搞得更猜谜似的，何苦！文章除了要达意，音韵美也是要顾一下的，大家发声读读这句话，难受不？     
 
 据说罗素在他五岁时曾想：如果我能活到70岁，那我到现在才捱过我全部生命的十四分之一，我觉得面前漫长的无聊生涯简直难以忍受。文章看到这里，第一段才结束，后边还有六段，时间放佛停下了脚步；如此挣扎一番，发现这篇文章才看完七分之一，我内心的悲伤和罗素大人是一样一样的。    
 
-为了让悲伤的心好过点，我决定不再逐句地“品”下去了，步子迈大点吧。不过下一句还是要单独拎出来说一下：“我们怀揣热忱的灵魂天然被赋予对超越性的追求，不屑于古旧坐标的约束，钟情于在别处的芬芳。”这句为什么要单独拎出来呢？因为它展现了作者的“哲学”气质，其蕴于对“超越性”的追求中。“超越性”是什么？这是不好说清楚的。我们看得见摸得着的东西是不“超越”的，因为它们实在且有限；“超越”的东西是无形的，因其无形，固能永恒，所以谓之“超越”。这实在是个很“哲学”的概念，这概念本不空洞，但容易被人“空洞地”使用。作者在这里用得空不空洞，大家自行判断吧。接着，作者表明自己不屑这追求被“古旧坐标”约束，“钟情于在别处的芬芳”。这后半句里，“于”和“在”似乎用重复了。这虽然不是什么大问题，但出现在一篇满分作文里还是挺扎眼。   
+为了让悲伤的心好过点，我决定不再逐句地“品”下去了，步子迈大点吧。不过下一句还是要单独拎出来说一下：“我们怀揣热忱的灵魂天然被赋予对超越性的追求，不屑于古旧坐标的约束，钟情于在别处的芬芳。”这句为什么要单独拎出来呢？因为它展现了作者的“哲学”气质，其蕴于对“超越性”的追求中。“超越性”是什么？这是不好说清楚的。我们看得见摸得着的东西是不“超越”的，因为它们实在且有限；“超越”的东西是无形的，因其无形，固能永恒，所以谓之“超越”。这实在是个很“哲学”的概念，这概念本不空洞，但容易被人“空洞地”使用。作者在这里用得空不空，大家自行判断吧。接着，作者表明自己不屑这追求被“古旧坐标”约束，“钟情于在别处的芬芳”。这后半句里，“于”和“在”似乎用重复了。这虽然不是什么大问题，但出现在一篇满分作文里还是挺扎眼。   
 
 如果说作者写到这里还只是怀着卖弄的心思搞点小动作的话，接下来就是略伴癫狂的胡言乱语了：
 
 > 但当这种期望流于对过去观念不假思索的批判，乃至走向虚无与达达主义时，便值得警惕了。与秩序的落差、错位向来不能为越矩的行为张本。而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚。　  
 
-这行文让人摸不着头脑。先看第一句，细分析这话，我想作者可能是说人不能太心高气傲，别看啥沾地气的都看不惯，也别老想着往非主流里钻。这文字有些突兀，为帮助理解，最好假设面前站着一个自命不凡，与周围的世界格格不入的年轻人，正用以上话语劝解自己与这个世界妥协。至于一个追求“超越性”的人如何走向虚无与达达主义，我不理解。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，它们本来就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话谁看得懂？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。这话另有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
+这行文让人摸不着头脑。先看第一句，细分析这话，我想作者可能是说人不能太心高气傲，别看啥沾地气的都看不惯，也别老想着往非主流里钻。这文字有些突兀，为帮助理解，最好想象面前站着一个自命不凡，与周围的世界格格不入的年轻人，正用以上话语劝解自己与这个世界妥协。至于一个追求“超越性”的人如何走向虚无与达达主义，我不理解。啥是“虚无主义”和“达达主义”？这两，前一个是思想史上的一个观念集合，后一个是其在文艺上的子集，并列在一起似乎有点奇怪。为啥要我在这里要用“观念集合”和“子集”这样看起来很装的词来形容“虚无”和“达达”的关系呢？一来，它们本来就是这关系，二来，文章读到这里，我似乎也受到了作者的影响，想拽几个词装一装了。接下来是第二句（废话，难不成第一句后头还能是第三句？），落差和错位如何为“越矩行为”张本？我第一眼看到“张本”，第一反应是一位日本的乒乓球运动员，大家有可能在下一届奥运会上看到他，会是中国男队的劲敌。说回文章，“张本”一词用对了吗？这整句话是在说啥？我猜这句话说的是，一般人由于期望受挫就会产生不好的情绪，在这种情绪的驱动下会作出不理性的反抗行为；虽然这些“越矩”之事是由于感到了理想与现实间的落差而为，事出有因，但这不能成为将那些不合理的行为正当化的理由。当然，这话另有一个理解方式，即我不能拿我不理解现有秩序来作为做事不靠谱的理由，只是这么一理解，这话跟废话无异了。唉，这么读文章真累。喘口气，继续。第三句“而纵然我们已有翔实的蓝图，仍不能自持已在浪潮之巅立下了自己的沉锚”。这还是个让人看不懂的句子。我琢磨了一下，猜想这句话难懂可能是因为作者误用了“自持”这个词。“自持”是自控的意思，但作者在这里把它当成了“自诩”或“自以为”的意思来用了；把“自以为”代入原文，突然好懂了一些。至于何为“浪潮之颠”，何为“沉锚”，大家自己去体会吧。      
 
 下一段：   
 
 > 社会与家庭暂且被我们把握为一个薄脊的符号客体，一定程度上是因为我们尚缺乏体验与阅历去支撑自己的认知。而这种偏见的傲慢更远在知性的傲慢之上。　  
 
-来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。这段话里，不仅“薄脊”一词我看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用这样的词是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
+来了，来了，又是个看不懂的词，“薄脊”。这是个放狗都搜不出来的词。想来作者心中可能思绪万千，平素大家用的那些“庸脂俗粉”已不足以表其万一，得自己造词来形容了。这段话里，不仅“薄脊”一词我看不懂，其它部分我也看不懂，比如家庭和社会为何成了“符号客体”，用了这么个一般出现在社科类论文里的词，作者是要表达什么？当然，我也不知道什么叫作“偏见的傲慢”，结合前文，我感觉作者要表达的可能是“出于无知的傲慢”吧；而啥叫“知性的”傲慢，我是猜都猜不出来了。   
 
 写到这里，我不禁自觉先前想将这篇文章“捋一捋”的想法有点天真了。我高估了这“满分作文”的水平，低估了做这事的难度；梳理还未过半，已经觉得有点累且无聊了。往下一看，不通的句子和混乱搭配的词接踵而至，让我望而生畏。先深呼吸一口，再捉几个显眼的吧。比如说，什么叫“对自己的期望本就是在与家庭与社会对接中塑型的动态过程”，拿人话说，应该是“自己的理想不断与家庭和社会的期许对接，磨合，这是个动态的过程，而我们对自己的期待就是在这么个磨合的过程中被塑形的”；下一个，“观念”如何又是“实践的？”观念就是观念，遵循某观念的指导行动，才叫实践；我们可以实践某观念，但观念不能是“实践的”，除非作者重新定义这个形容词。再下一个，“倘若我们在对过往借韦伯之言‘祓魅’，又对不断膨胀的自我进行‘赋魅’，那么在丢失外界预期的同时，未尝也不是丢了自我。”韦伯之言是啥？之前提过吗？啥叫“祓魅”，啥叫“赋魅”大家就别问了，问就是“量子力学”（这是一个朋友的口头禅，借用一下）。    
 
@@ -64,13 +64,13 @@ tags: []
 
 > 毫无疑问，从家庭与社会角度一觇的自我有偏狭过时的成分。但我们所应摒弃的不是对此的批判，而是其批判的廉价，其对批判投诚中的反智倾向。   
 
-“觇”就是看的意思，别笑，我是上网搜出来的。我真不明白写这么个奇怪的字来表达一个这么直白的意思，有必要吗？而且就算先不问为啥要用这个生僻字，光说句子，这第一句读得通吗？给这位同学满分的几位老师，要不你们出来把这句话翻译一下？还有，既然是“从家庭与社会角度一觇”，那看到的还能叫自我吗？那不是别人眼中的“我”吗？下边第二句，啥叫不是摒弃“批判”，而是摒弃“批判的廉价”？难道是说批判就批判，咱不谈价格？或者说之前的批判卖便宜了，得加点价才有资格被留下来，不摒弃？想其所谓，大概是说不是不让批判，只是别张嘴就来，瞎批判吧。当然，也别问啥叫“对批判投诚中的反智倾向”，问就是“量子力学”。   
+“觇”就是看的意思，别笑，我是上网搜出来的。我真不明白写这么个奇怪的字来表达一个这么直白的意思，有必要吗？而且就算先不问为啥要用这个生僻字，光说句子，这第一句读得通吗？给这位同学满分的几位老师，要不你们出来把这句话翻译一下？还有，既然是“从家庭与社会角度一觇”，那看到的还能叫自我吗？那不是别人眼中的“我”吗？下边第二句，啥叫不是摒弃“批判”，而是摒弃“批判的廉价”？难道是说批判就批判，咱不谈价格？或者说之前的批判整便宜了，得加点价才有资格被留下来，不摒弃？想其所谓，大概是说不是不让批判，只是别张嘴就来，瞎批判吧。当然，也别问啥叫“对批判投诚中的反智倾向”，问就是“量子力学”。   
 
 至于作者在这段里引用尼采的话是否用对了地方，我不作具体分析。不是因为他用得对，而是用得连错都算不算上。“永远重复”这几个字是从哪儿蹦出来？尼采的“永恒轮回”吗？为什么用在这里？理解“永恒轮回”的意思吗？    
 
 这文章看着难过，但看到只剩两段了，心中稍喜，继续吧。   
 
-和前头那些难读的硬骨头们相比，倒数第二段写得还算“平平无奇”。第一句：“蓝图上的落差终归只是理念上的区分，在实践场域的分野也未必明晰。”和前面很多话一样，这话也是初看不懂，再看似乎有点意思---汉字都认识，连起来却成了似曾相识，你看人家这功力！但真的有意思吗？落差只是区分？怎么解？我猜这话的前半句大概是说：自己对未来的规划和家庭、社会对自己的期许间有分歧，这分歧源自（哈哈，这里可用“滥觞于”了）彼此想法的不同；后半句是说啥呢？啥叫“实践场域的分野”？场域就是领域，不过在社会学上有人以它为基础搞出了套理论；分野其实是个日语词，在中文里我很少见它，其在日语里的意思还是领域。这样一来，这话的后半句其实也是不通的，什么叫“实践领域的领域也未必分明”？中间“涉足”权力那段莫名其妙，在我看来是略带癫狂的呓语，跳过吧。“对无法言说之事保持沉默”，这里维特根斯坦出现得略显尴尬。我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。不管维特根斯坦的原话是什么意思，可以确定的是它肯定不是作者表达出来的那个意思。当然，我国自古有对引用语断章取义的传统，用现代的说法，这叫创造性地背离。但我想这样的“背离”是有前提的，即需理解字句的原义，然后再稍加发挥。望文生义地乱用容易闹笑话。       
+和前头那些难读的硬骨头们相比，倒数第二段写得还算“平平无奇”。第一句：“蓝图上的落差终归只是理念上的区分，在实践场域的分野也未必明晰。”和前面很多话一样，这话也是初看不懂，再看似乎有点意思，再一细想又觉不懂---汉字都认识，连起来却成了似曾相识，你看人家这功力！但真的有意思吗？落差只是区分？怎么解？我猜这话的前半句大概是说：自己对未来的规划和家庭、社会对自己的期许间有分歧，这分歧源自（哈哈，这里可用“滥觞于”了）彼此想法的不同；后半句是说啥呢？啥叫“实践场域的分野”？场域就是领域，不过在社会学上有人以它为基础搞出了套理论；分野其实是个日语词，在中文里我很少见它，其在日语里的意思还是领域。这样一来，这话的后半句其实也是不通的，什么叫“实践领域的领域也未必分明”？中间“涉足”权力那段莫名其妙，在我看来也是略带癫狂的呓语，跳过吧。“对无法言说之事保持沉默”，这里维特根斯坦出现得略显尴尬。我想，作者如果真理解这句话的意思，那就不会酿成这样尴尬的局面了。要说清楚这句话的意思，需要明白《逻辑哲学论》前六篇是如何界定“可言说之事”的。大家若感兴趣，自己去看吧。不管维特根斯坦的原话是什么意思，可以确定的是它肯定不是作者表达出来的那个意思。当然，我国自古有对引用语断章取义的传统，用现代的说法，这叫创造性地背离。但我想这样的“背离”是有前提的，即需理解字句的原义，然后再稍加发挥。望文生义地乱用容易闹笑话。       
 
 最后一段。   
 
