--- a/content/cn/2020-08-03-sigh.md
+++ b/content/cn/2020-08-03-sigh.md
@@ -40,7 +40,7 @@ tags: []
 
 看完第一句，惊魂还未定，第二句又来了：“滥觞于家庭与社会传统的期望正失去它们的借鉴意义。”滥觞是啥？一查，哦，是“起源”的意思啊。好吧，咱读书少，咱认。但自个儿惭愧完了一想，好像有点~~妖气~~问题。啥叫“起源于”家庭和社会的期望？直接说“家庭和社会的期望”不行吗？若是非要强调这期望的“出处”，那写成“来自家庭与社会的期望”如何？作者的这种写法在我看来跟把水称作一氧化二氢没啥区别，就是不说人话。      
 
-“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来。其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。表达这么简单个意思却搞得更猜谜似的，何苦！文章除了要达意，音韵美也是要顾一下的，大家发声读读这句话，难受不？     
+“滥觞”未尽，第三句已至：“但面对看似无垠的未来天空，我想循卡尔维诺“树上的男爵”的生活好过过早地振翮。”卡，卡什么诺？男，男什么爵？振，振什么翮？我承认我不知道卡尔维诺是谁，更没有看过“树上的男爵”，振那啥“翮”也是放狗搜了才明白是要“飞”的意思。用了这么些不凡的材料，作者表达了什么了不起的意思吗？我没看出来。其实他就是说，人嘛，既要心怀理想，又要考虑现实，不要没事儿随便浪。表达这么简单个意思却搞得跟猜谜似的，何苦！文章除了要达意，音韵美也是要顾一下的，大家发声读读这句话，难受不？     
 
 据说罗素在他五岁时曾想：如果我能活到70岁，那我到现在才捱过我全部生命的十四分之一，我觉得面前漫长的无聊生涯简直难以忍受。文章看到这里，第一段才结束，后边还有六段，时间放佛停下了脚步；如此挣扎一番，发现这篇文章才看完七分之一，我内心的悲伤和罗素大人是一样一样的。    
 
