--- a/content/cn/2020-10-02-mirror.md
+++ b/content/cn/2020-10-02-mirror.md
@@ -10,7 +10,7 @@ tags: []
 
 我想，记忆稍微好点的人大概不会对“抵制”这个词感到陌生，我们以往常在新闻上看到它，多数时候是我们在抵制别人。比如因钓鱼岛抵制日本，因萨德抵制韩国，因华为抵制加拿大（鹅）。那时，我们群情激愤，觉得自己是站在正义的一边和邪恶战斗。这为正义拍案而起的愤怒，看上去是不是很美？    
 
-我还记得我们也曾奥运火炬传递在巴黎受阻而抵制过一家法国超市，后来风波平了，那家超市在某些地区重开。他们搞了促销活动，很多商品打折，新闻上说超市门外排了长长的队，都是等着买打折商品的人。礼仪之邦的民众不计前嫌的样子，看上去是不是很美？   
+我还记得我们也曾因奥运火炬传递在巴黎受阻而抵制过一家法国超市，后来风波平了，那家超市在某些地区重开。他们搞了促销活动，很多商品打折，新闻上说超市门外排了长长的队，都是等着买打折商品的人。礼仪之邦的民众不计前嫌的样子，看上去是不是很美？   
 
 我们说以史为镜，可以知兴替，这当然不错。但以当下的他人为镜，我们也能照出曾经的我们。仔细地打量，反省，未尝不会对我们自己的未来有所裨益。   
 
