--- a/content/cn/2020-10-02-sfiction.md
+++ b/content/cn/2020-10-02-sfiction.md
@@ -16,7 +16,7 @@ tags: []
 
 把范围缩小来看，科学能不能回答人生目的的问题呢？   
 
-要问一个问题是否可被解答，得先弄清楚这个问题是否有答案，很多哲学家的人生都耗在了试图回答没有答案的问题上。殷鉴虽不远，但这样的问题依然不时被轻率地提出。对于人生的目的为何这样虚无缥缈的问题，最好的回答就是从根上消解掉它。刘慈欣的思路是对的，只是他想到的手段太粗暴了。   
+要问一个问题是否可被解答，得先弄清楚这个问题是否有答案，很多哲学家的一生都耗在了试图回答没有答案的问题上。殷鉴不远，这样的问题依然不时被轻率地提出。对于人生的目的为何这样虚无缥缈的问题，最好的回答就是从根上消解掉它。刘慈欣的思路是对的，只是他想到的手段太粗暴了。   
 
 尼采说，人最会欺骗自己。人生是无意义的，而人需要一个意义才能活下去，于是他也就似乎真在人生里找到了意义。   
 
