--- a/content/cn/2020-10-19-towinter.md
+++ b/content/cn/2020-10-19-towinter.md
@@ -34,7 +34,7 @@ tags: []
 
 人在什么时候最憧憬希望？    
 
-重读孔乙己，“记着！这些字应该记着。将来做掌柜的时候，写账要用。”我突然想起了静婆婆，心理感到一阵颤动。
+重读孔乙己，“记着！这些字应该记着。将来做掌柜的时候，写账要用。”我想起了静婆婆，心里感到一阵颤动。
 
 
 
