--- a/content/cn/2020-10-19-towinter.md
+++ b/content/cn/2020-10-19-towinter.md
@@ -24,9 +24,9 @@ tags: []
 
 长大后，我已不像小时候那么怕静婆婆了，而是觉得她孤单，可怜。于是，我每次见到她都主动跟她问好，虽然话一说就尽，但脸上尽力笑得开心，可能是希望在这路过的不到一分钟里，留下点什么。这些年里，静婆婆的头发从花白变成了全白，人也越发瘦了。她的话越来越少，寒暄的内容也变得重复，单调。到后来，每打完招呼后，她只是看着我，不断重复，“你好，真好，好...。”   
 
-我好吗？我不觉得，但我又觉得跟她分辩是不合适的，也不知道该如何回应，于是只能惭愧地笑。看着静婆婆的孤独与衰老，我觉得有点难过，但又无力做什么，只能尽力地笑着向她问好。而她依然只是看着我，重复“你好，真好，好...。” 唯一不同的是，这重复的话语随着年月的过去越来越低。   
+我好吗？我不觉得，但我又觉得跟她分辩是不合适的，也不知道该如何回应，于是只能惭愧地笑。看着静婆婆的孤独与衰老，我觉得有些难过而无力，只能尽力地笑着跟她说几句话。而她依然只是看着我，重复“你好，真好，好...。” 唯一不同的是，这重复的话语随着年月的过去越来越低。   
 
-这低而弱的声音从我耳朵里进入，然后变成块石头压在心上，声音越低弱，这石头也越沉。我又开始怕看到静婆婆，怕面对这沉重。从她家门口过时，如果看到门口没人，我心里就稍松口气，并快步走过。如果看到她在，就只能努力地笑起来，向她问好，心里觉得难过，似乎还有愧疚。   
+这低而弱的声音从我耳朵里进入，然后变成块石头压在心上，声音越低弱，这石头也越沉。我又开始怕看到静婆婆，怕面对这沉重。从她家门口过时，如果看到门口没人，我心里就稍松口气，并快步走过。如果看到她在，就只能努力地笑起来，心里觉得难过，似乎还有愧疚。   
 
 上大学后，我就很少回家，也就很少见静婆婆。一晃多年，不知她是否还在。   
 
