--- a/content/cn/2020-10-19-towinter.md
+++ b/content/cn/2020-10-19-towinter.md
@@ -14,17 +14,17 @@ tags: []
 
 这一段是我以前没有留意的，为什么突然觉得不同？我想了一下，想起了静婆婆。
 
-静婆婆年纪跟我奶奶相仿，住在我家附近的一个小巷里的一间青瓦房里。那时我刚转学到城里，和爷爷奶奶一起住在这个小巷附近，每天上学时都需穿过这条小巷。路过静婆婆家门口时，常碰到她在洗衣服或洗菜，一看到我，她就跟我打招呼，并聊几句天。我最开始有点怕她，因为她很瘦，一只眼睛不知是因受伤还是疾病，眼球明显地鼓出来且发灰，在另一只正常眼睛的对照下，显得更吓人；她颧骨很突出，并总是弯着腰---这么说吧，她看起来有点像是骇人的巫婆。当然，我知道她并不是，只是心里忍不住害怕，所以每次答她都很敷衍，并从她门口快步走过。   
+静婆婆年纪跟我奶奶相仿，住在我家附近的一个小巷里的一间青瓦房里。那时我刚转学到城里，和爷爷奶奶一起住在这个小巷附近，每天上学上学都需穿过这条小巷。路过静婆婆家门口时，常碰到她在洗衣服或洗菜，一看到我，她就跟我打招呼，并聊几句天。我最开始有点怕她，因为她很瘦，一只眼睛不知是因受伤还是疾病，眼球明显地鼓出来且发灰，在另一只正常眼睛的对照下，显得更吓人；她颧骨很突出，并总是弯着腰---这么说吧，她看起来有点像是骇人的巫婆。当然，我知道她并不是，只是心里忍不住害怕，所以每次答她都很敷衍，并从她门口快步走过。   
 
 静婆婆有个孙子，名字叫静然。他跟我在同一个小学，年纪比我要小两三岁，是一个很文静，样子很清秀的孩子。我从她家门口过时，如果静然正好在家，她在跟我打完招呼后就会转向他，要求他向我学习。这情形让我觉得尴尬并惭愧，只能在敷衍答话后加快步伐走开。我觉得她并不知道我在学校表现如何，也觉得我没有什么好让人学习的。    
 
 邻居多年，我记忆中只见过静婆婆的儿子（静然的父亲）几面，没有见过她儿媳妇，多数时候都是她和孙子相依为命。她儿子是个很挺拔，清秀的人，一看到他就知道知道静然的秀气遗传自父亲。可惜的是，听别人说他脑子或是精神上有毛病，似乎曾弄出过乱子。我听说这事的时候，心里觉得可惜，但愿静然不要遗传到这方面的毛病。    
 
-时间一年年过去，我读完小学，上了初中，高中。不知从什么时候开始，我就很少见到静然，不知他去了哪里；只是静婆婆依然日复一日地在自家门口做点家务或者呆坐，渐渐老去。那时整个县城都在大搞建设，新楼们拔地而起，这条巷子像是被丢在了一个不同的空间里，小城的欣欣向荣和它无关，渐渐破败。我从巷子穿过，心里感觉苍凉。     
+时间一年年过去，我读完小学，上了初中，高中。不知从什么时候开始，我就很少见到静然，不知他去了哪里；只是静婆婆依然日复一日地在自家门口做点家务或者呆坐，渐渐老去。那时整个县城都在大搞建设，新楼们拔地而起，但这条巷子像是被丢在了一个不同的空间里，小城的欣欣向荣和它无关，渐渐破败。我从巷子穿过，心里感觉苍凉。     
 
 长大后，我已不像小时候那么怕静婆婆了，而是觉得她孤单，可怜。于是，我每次见到她都主动跟她问好，虽然话一说就尽，但脸上尽力笑得开心，可能是希望在这路过的不到一分钟里，留下点什么。这些年里，静婆婆的头发从花白变成了全白，人也越发瘦了。她的话越来越少，寒暄的内容也变得重复，单调。到后来，每打完招呼后，她只是看着我，不断重复，“你好，真好，好...。”   
 
-我好吗？我不觉得，但我又觉得跟她分辩是不合适的，也不知道该如何回应，于是只能惭愧地笑。看着静婆婆的孤独与衰老，我觉得有些难过而无力，只能尽力地笑着跟她说几句话。而她依然只是看着我，重复“你好，真好，好...。” 唯一不同的是，这重复的话语随着年月的过去越来越低。   
+我好吗？我不觉得，但我又觉得跟她分辩是不合适的，也不知道该如何回应，于是只能惭愧地笑。看着静婆婆的孤独与衰老，我觉得有些难过而无力，只能尽力地笑着跟她说几句话。而她依然只是看着我，重复“你好，真好，好...。” 唯一变化的是，这重复的话语随着年月的过去越来越低。   
 
 这低而弱的声音从我耳朵里进入，然后变成块石头压在心上，声音越低弱，这石头也越沉。我又开始怕看到静婆婆，怕面对这沉重。从她家门口过时，如果看到门口没人，我心里就稍松口气，并快步走过。如果看到她在，就只能努力地笑起来，心里觉得难过，似乎还有愧疚。   
 
