--- a/content/cn/2020-10-19-towinter.md
+++ b/content/cn/2020-10-19-towinter.md
@@ -14,7 +14,7 @@ tags: []
 
 这一段是我以前没有留意的，为什么突然觉得不同？我想了一下，想起了静婆婆。
 
-静婆婆年纪跟我奶奶相仿，住在我家附近的一个小巷里的一间青瓦房里。那时我刚转学到城里，和爷爷奶奶一起住在这个小巷附近，每天上学上学都需穿过这条小巷。路过静婆婆家门口时，常碰到她在洗衣服或洗菜，一看到我，她就跟我打招呼，并聊几句天。我最开始有点怕她，因为她很瘦，一只眼睛不知是因受伤还是疾病，眼球明显地鼓出来且发灰，在另一只正常眼睛的对照下，显得更吓人；她颧骨很突出，并总是弯着腰---这么说吧，她看起来有点像是骇人的巫婆。当然，我知道她并不是，只是心里忍不住害怕，所以每次答她都很敷衍，并从她门口快步走过。   
+静婆婆年纪跟我奶奶相仿，住在我家附近的一个小巷里的一间青瓦房里。那时我刚转学到城里，和爷爷奶奶一起住在这个小巷附近，每天上学放学都需穿过这条小巷。路过静婆婆家门口时，常碰到她在洗衣服或洗菜，一看到我，她就跟我打招呼，并聊几句天。我最开始有点怕她，因为她很瘦，一只眼睛不知是因受伤还是疾病，眼球明显地鼓出来且发灰，在另一只正常眼睛的对照下，显得更吓人；她颧骨很突出，并总是弯着腰---这么说吧，她看起来有点像是骇人的巫婆。当然，我知道她并不是，只是心里忍不住害怕，所以每次答她都很敷衍，并从她门口快步走过。   
 
 静婆婆有个孙子，名字叫静然。他跟我在同一个小学，年纪比我要小两三岁，是一个很文静，样子很清秀的孩子。我从她家门口过时，如果静然正好在家，她在跟我打完招呼后就会转向他，要求他向我学习。这情形让我觉得尴尬并惭愧，只能在敷衍答话后加快步伐走开。我觉得她并不知道我在学校表现如何，也觉得我没有什么好让人学习的。    
 
