--- a/content/cn/2020-10-26-taihai.md
+++ b/content/cn/2020-10-26-taihai.md
@@ -7,9 +7,9 @@ categories: []
 tags: []
 ---
 
-听朋友说国内在筹拍一部讲施琅的电影，在现在的台海局势下，这部电影的现实意义不言而喻。抛开现实，我对这个电影怎么拍，具体说，怎么处理清朝和郑家的关系很感兴趣。
+听朋友说国内在筹拍一部讲施琅的电影，在现在的台海局势下，这部电影的现实意义不言而喻。   
 
-我们知道，从荷兰人手里夺回台湾的郑成功是民族英雄；施琅和郑家反目后带兵攻台，帮助康熙收复台湾，也是个英雄。这段历史极有意思，前后相隔二十年，立场截然不同的两个人都成了英雄，那我们自己的立场何在？郑成功一心反清复明，作为汉人，我对他自然同情，而且是他从外人手里夺回了台湾的实际控制权；但作为现代中国人，清朝是我们历史的一部分，我们对台湾主权声明的合法性直接继承自清朝，所以我们对施琅和康熙也有同情。如果一个现代人穿越到郑成功的年代，设身处地，怕是不容易在二十年间为他们双方都点赞的，除非精神分裂了。   
+抛开现实，我对这个电影怎么拍，具体说，怎么处理清朝和郑家的关系很感兴趣。我们知道，从荷兰人手里夺回台湾的郑成功是民族英雄；施琅和郑家反目后带兵攻台，帮助康熙收复台湾，也是个英雄。这段历史极有意思，前后相隔二十年，立场截然不同的两个人都成了英雄，那我们自己的立场何在？郑成功一心反清复明，作为汉人，我对他自然同情，而且是他从外人手里夺回了台湾的实际控制权；但作为现代中国人，清朝是我们历史的一部分，我们对台湾主权声明的合法性直接继承自清朝，所以我们对施琅和康熙也有同情。如果一个现代人穿越到郑成功的年代，设身处地，怕是不容易在二十年间为他们双方都点赞的，除非精神分裂了。   
 
 我们往往习惯了用“自古以来”作为某些合法性的来源，可当这“自古”里本身包含矛盾时，我们该如何处之？明末清初，一帮读书人宁肯被砍头也不剃发；清末民初，还是一帮读书人，宁肯被枪毙也不剪辫子---历史就是这么矛盾得可爱。虽然到真的上了刀枪的时候，也是该剃发剃发，该剪辫子剪辫子，但当初的那份反抗确实发自内心的。   
 
