--- a/content/cn/2020-04-27-thoughts.md
+++ b/content/cn/2020-04-27-thoughts.md
@@ -6,7 +6,7 @@ slug: on-internaltionlism
 categories: []
 tags: []
 ---
-微信群里有人说起罗永浩，说这是个把自己活成梗的男人。我对罗永浩的了解限于知道这个名字以及知道他教过英语，买过手机。群友（不大熟悉）说他是个有趣的人，并列举了他的一些“名言”。其中有一句让我比较感兴趣，他是这么说的：   
+微信群里有人说起罗永浩，说这是个把自己活成梗的男人。我对罗永浩的了解限于知道这个名字以及知道他教过英语，卖过手机。群友（不大熟悉）说他是个有趣的人，并列举了他的一些“名言”。其中有一句让我比较感兴趣，他是这么说的：   
 
 > 我是一个中国人，我不为此自豪，也不为此自卑，我只是凑巧是个中国人。我是一个朝鲜族，我不为此自豪，也不为此自卑，我只是凑巧是个朝鲜族...我是一个国际主义者...   
 
