--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -65,7 +65,7 @@ tags: []
 
 虽然我第一眼看这首原版《静夜思》，感到各种不通和别扭，但既然它很可能是李白的原始版本，那我自然要放尊重些，更我们的流行版本放一起，多看几遍以作比较。  
 
-也不知是不是心理作用，细看之下，突然觉得我们现行版本里第一句和第三局的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美！而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
+也不知是不是心理作用，细看之下，突然觉得我们现行版本里第一句和第三句的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美！而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
 
 1. 以手遮目而望。  
 2. 瞧，看。可引申为观察。  
