--- a/content/cn/2017-04-08-Donate.md
+++ b/content/cn/2017-04-08-Donate.md
@@ -29,7 +29,7 @@ tags: []
 
 在喜马拉雅有个系列节目，知识量和趣味性都不错。听这个节目的时候，我能感觉到，为了收集汇总如此多的资料来讲给我们听，主播们需要付出多大的努力。我有时都有点担心，怕这几个主播哪天突然觉得太累，不干了怎么办，所以很想表达我对他们的支持和感谢。但是第一笔“支持”迟迟没有打出去，原因就在“打赏”两个字---我还是突破不了这个心结，在点击这个按钮时，我心里满是惭愧，觉得这样对主播太不尊重了。这纠结让我想起另外一个资助系统。在一些英文网页上，或者使用一些免费软件的时候，有时会弹出小窗口，问是否愿意在经济上给予支持，一般情况下，这时使用的动词是donate，我觉得这个词就很好，曾经想建议喜马拉雅把“打赏”换成“捐赠”，但一来发现这个词不是那么的上口，另外，捐赠也不是多数国民所习惯的，估计真改成“捐赠”，喜马拉雅主播们就得饿肚子了。
 
-纠结了半天，第一笔“打赏”还是送出去了，同时也隐隐觉得我有点"堕落"了。
+纠结了半天，第一笔“打赏”还是送出去了，同时也隐隐觉得我有点“堕落”了。
 
 有一天看一个唱歌比赛（可能是《我是歌手》，但难得去查证了）的时候，听到一个有意思的词：让我们欢迎下一位竞演歌手上台。错愕瞬间后，反应过来了，这个节目邀请的都是些比较有名的歌手来参加比赛。因为是有名的人们，要是像菜鸟们一样“比赛”，接受别人的打分有点掉份儿，他们来参加比赛，同时也是种表演，故名曰：竞演。不知道这是谁想出来的，挺有才，真想请他/她帮忙想想有什么词能把“打赏”给替换掉。
 
