--- a/content/cn/2021-01-12-forthem.md
+++ b/content/cn/2021-01-12-forthem.md
@@ -102,21 +102,16 @@ tags: []
 
 蒙哥马利说人民需要引导，这其实和毛泽东早年的看法一致，但现在的毛泽东认为“人民是懂事情的。终究还是人民决定问题。”在毛泽东看来，代表人民的利益就是一个政治家最大的原则。克伦威尔，耶稣，甘地，这些代表人民的人都没有得到善终，毛泽东知道这些，但和人民站在一起是他的信条，他的原则，他义无反顾。所以，当他感到有人要搞修正主义，有人要骑在人民头上了，年迈的他再一次站了起来，战斗。   
 
-但这时的毛泽东毕竟老了。从一些谈话里，可以看出晚年的毛泽东似乎开始有了些执念。比如他在跟胡志明谈话时，对话风格是这样的：  
+但这时的毛泽东毕竟老了。从一些谈话里，可以看出晚年的毛泽东似乎开始有了些执念。比如他在 1966 年跟胡志明谈话时，对话风格是这样的：  
 
-> 毛泽东：我们最近这场斗争，是从去年十一月开始的，已经七个多月了。最初，姚文元  
-发难。他是个青年人。讨论清官等问题。你不是赞成清官吗？你说世界上有清官，我就没有见  
-过。无官不贪，只有多少之别，没有真正的清官。  
+> 毛泽东：我们最近这场斗争，是从去年十一月开始的，已经七个多月了。最初，姚文元发难。他是个青年人。讨论清官等问题。你不是赞成清官吗？你说世界上有清官，我就没有见过。无官不贪，只有多少之别，没有真正的清官。
 胡志明：我的父亲当了知县，他没有贪。  
 毛泽东：不见得，那时你还小，他贪你不知道。当知县可了不起。  
 胡志明：当了几个月，他就被撤职了。  
-毛泽东：那是他来不及贪，当上一两年知县，我看他不大贪也小贪。现在我们不搞清官、贪  
-官这件事了，搞文化大革命。搞教育界、文艺界、学术界、哲学界、史学界、出版界、新闻界。  
-文艺界又分好多界，有戏剧界、电影界、音乐界、美术界、雕刻界；戏剧界又分京戏和几百种地  
-方戏。  
+毛泽东：那是他来不及贪，当上一两年知县，我看他不大贪也小贪。现在我们不搞清官、贪官这件事了，搞文化大革命。搞教育界、文艺界、学术界、哲学界、史学界、出版界、新闻界。文艺界又分好多界，有戏剧界、电影界、音乐界、美术界、雕刻界；戏剧界又分京戏和几百种地方戏。  
 
 
-这时毛泽东认为无官不贪，反腐问题已经不优先了，而是要先搞文化大革命，打掉内部的修正主义者。  
+这时毛泽东认为反腐问题已经不优先了，而是要先搞文化大革命，打掉内部的修正主义者。  
 
 1966 年，林彪等人吹捧毛泽东，打算把毛泽东抬出来推进一些事，打击一些人。毛泽东在写给江青的信里袒露了自己的担忧。他说：  
 
@@ -129,9 +124,9 @@ tags: []
 
 > 工作组使起了阻碍革命的作用，清华、北大的工作组就是这样。我们不是正在制定关于文化大革命的文件吗我看文件上要写明只有行凶、杀人、放火、放毒的才叫反革命，写大字报、写反动标语的不能抓。有人写“拥护党中央，打倒毛泽东”，你抓他干什么？    
 
-可惜，这一次毛泽东错了。十年时间，一切都乱了。  
+可惜，这一次毛泽东错了。十年时间，一切都乱了。我想，造成这个悲剧的可能原因之一是，毛泽东虽然相信人民，但他晚年已经长期没有直接跟人民接触了。      
 
-文革给中国最大的启示或许是，文革千万不能再重演。如果我们后人能记住这个教训，那先前的惨痛教训才多少有了点意义。   
+文革给中国最大的启示或许是，文革千万不能再重演。如果我们后人能记住这个教训，那先前的惨痛教训才多少有了点意义。        
 
 毛泽东已经走了四十多年了，幸好他的文章还在。从毛泽东的文章里认识毛泽东，现在我多少有点明白为什么在他离开几十年后还有人去天安门找他诉委屈，为什么还有那么多人觉得他能保护人民。
 
