--- a/content/cn/2021-01-12-forthem.md
+++ b/content/cn/2021-01-12-forthem.md
@@ -22,13 +22,13 @@ tags: []
 
 > 吾读史至商鞅徙木立信一事，而叹吾国国民之愚也，而叹执政者之煞费苦心也，而叹数千年来民智之不开、国几蹈于沦亡之惨也。
 
-显然，这时的毛泽东是站在统治者的角度看问题的，他替商鞅骂屁民：你们怎么这么笨，别人做对你们有利的事还要这么煞费苦心劝你们相信，这国家都要被你们给笨亡了。  
+自古以来，中国的读书人都是跟统治者一道的，他们一心想着进入庙堂，借统治者的势来施展自己的术。显然，这时的读书人毛泽东是站在统治者的角度看问题的，他替商鞅骂屁民：你们怎么这么笨，别人做对你们有利的事还要这么煞费苦心劝你们相信，这国家都要被你们给笨亡了。  
 
 他写的第二段更有意思：  
 
 > 法令者，代谋幸福之具也。法令而善，其幸福吾民也必多，吾民方恐其不布此法令，或布而恐其不生效力，必竭全力以保障之，维持之，务使达到完善之目的而止。政府国民互相倚系，安有不信之理？  
 
-这段文字体现了当年毛泽东的天真，他就是想不通既然是对人民有利的法令，为什么大家居然笨到不相信这是真的。单纯而天真的毛泽东不考虑为什么人民不相信政府，只是觉得老百姓太傻。但一般来说，当你觉得别人犯了不可理喻的傻时，犯傻的很可能是你自己。比如这个例子里，难道不该问政府是怎么丢掉人民的信任的吗？当年的毛泽东似乎没有想到这点。当然，我说这段有意思的原因不光是因为老毛的天真，而是因为后来发生的事情。    
+这段文字体现了当年毛泽东的天真，他就是想不通既然是对人民有利的法令，为什么大家居然笨到不相信这是真的。单纯而天真的毛泽东不考虑为什么人民不相信政府，只是觉得老百姓太傻。但一般来说，当你觉得别人犯了不可理喻的傻时，犯傻的很可能是你自己。比如这个例子里，难道不该问政府是怎么丢掉人民的信任的吗？当年的毛泽东似乎没有想到这点。当然，我说这段有意思的原因不光是因为老毛的天真，还因为后来发生的事情。    
 
 在这篇文章的最后，毛泽东还忧心忡忡地写道：
 
@@ -46,17 +46,17 @@ tags: []
 
 > 列位大家来听我说句白话。列位最不便益的是甚么，大家晓得吗？就是俗语说的，讲了写不得，写了认不得，有数算不得。都是个人，照这样看起来，岂不是同木石一样！所以，大家要求点知识，写得几个字，认得几个字，算得几笔数，方才是便益的。虽然如此，列位做工的人，又要劳动，又无人教授，如何能做到这样，真是不易得的事。现今有个最好的法子，就是我们第一师范办了一个夜学。今年上半年学生很多，列位中想有听过来的。这个夜学专为列位工人设的，从礼拜一起至礼拜五止，每夜上课两点钟；教的是写信、算账，都是列位自己时刻要用的。讲义归我们发给，并不要钱。夜间上课又于列位工作并无妨碍……快快来报名，莫再耽搁！
 
-这是毛泽东较早的一篇白话文章---给工人看的，当然要写大白话了。不知道毛泽东在写这篇文章的时候有没有想起几年前自己作的《商鞅徙木立信论》？在那篇文章的第二段，毛泽东感叹人民怎么这么傻，别人商鞅做为你好的事，你怎么不信他？但在这个招生广告中，毛泽东自己却也在想方设法地哄工人们来上课---老师免费，讲义免费，学了就有好处，快快来了，莫再耽搁！急迫的心情见于纸上。   
+这是毛泽东较早的一篇白话文章---给工人看的，当然要写大白话了。不知道毛泽东在写这篇文章的时候有没有想起几年前自己作的《商鞅徙木立信论》？在那篇文章的第二段，毛泽东感叹人民怎么这么傻，别人商鞅做为你好的事，你怎么不信他？但在这个招生广告中，毛泽东自己却也顾不得嫌弃民众的愚昧了，想方设法地哄他们来上课---老师免费，讲义免费，学了就有好处，快快来了，莫再耽搁！急迫的心情见于纸上。   
 
 由于担心工人们怕犯政府的戒严令，他还甚至专门写道： 
 
 > 有说时局不势，恐怕犯了戒严的命令，此事我们可以担保；上学以後，每人发讲牌一块，遇有军警查问，说是师范夜校学生就无妨碍了。若有为难之处，我们替你作保，此层只管放心......  
 
-那么问题来了，为什么当初批评老百姓笨的毛泽东突然不厌其烦地劝说工人们学习呢？答案在毛泽东的夜学日志里： 
+真是事无巨细都考虑到了啊！那么问题来了，为什么当初批评老百姓笨的毛泽东突然不厌其烦地劝说工人们学习呢？答案在毛泽东的夜学日志里： 
 
 > 我国现状，社会之中坚实为大多数失学之国民，此辈阻碍政令之推行、自治之组织、风俗之改良、教育之普及，其力甚大。此时固应以学校教育为急，造成新国民及有开拓能力之人材。而欲达此目的，不可不去为此目的之阻碍。此创设夜学之意。  
 
-当时毛泽东常看国际新闻，感到情势动荡，深为国家贫弱，民智不开而忧虑（他在 1916 年给朋友写信就预言日本会是中国的劲敌，对中国会有威胁，并预言“二十年内非一战不能图存”，国人应“磨砺以待日本”，也算是神预言了）。在那时，毛泽东就看出整个社会的中坚基础是大量失学的国民，他们进步了国家就进步，不然他们就是国家进步的最大阻碍，所以毛泽东要苦口婆心地劝他们学习。不过，这时毛泽东称这些失学之人为“此辈”，他和这些人不是一伙的。   
+原来，当时毛泽东常看国际新闻，感到情势动荡，深为国家贫弱，民智不开而忧虑（他在 1916 年给朋友写信就预言日本会是中国的劲敌，对中国会有威胁，并预言“二十年内非一战不能图存”，国人应“磨砺以待日本”，也算是神预言了）。在那时，毛泽东就看出整个社会的中坚基础是大量失学的国民，他们进步了国家就进步，不然他们就是国家进步的最大阻碍，所以毛泽东要苦口婆心地劝他们学习。不过，这时毛泽东称这些失学之人为“此辈”，他和这些人不是一伙的。   
 
 
 1918 年 8 月，毛泽东开始北漂了，当了北大的图书管理员。从 1919 年起，毛泽东开始频繁在杂志上发白话文章，针砭时弊，并开始参与群众运动。1921 年他成了中国共产党的创始人之一。1924 年国共合作，他以个人身份加入国民党，成了国民党的宣传部长。毛泽东做国民党宣传部长时，写了很多文章来总结国民党宣传工作的得失，这些文章收录在《毛泽东新闻工作文选》里（有些人说共产党是宣传起家，在这本书里也可以看到共产党的早期的宣传工作有多陋，以及毛泽东是怎么一步步把宣传工作搞起来的）。  
@@ -68,7 +68,7 @@ tags: []
 
 和那些坐而论道的人不同，毛泽东深入农民，听他们讲的道理；和若干年前的自己不同，毛泽东不再武断地认为群众是“愚民”，他站在他们的立场看问题。他认识到农民才是一切的根本，是埋葬帝国主义、军阀、贪官污吏、土豪劣绅的不可阻挡的力量。他不再站在“统治者”角度看问题，也不再站在“知识分子”的角度看问题，他和占中国总人口九成以上的人民站在了一起。可以说，从此这个大立场毛泽东再没变过。  
 
-不过这时的毛泽东还是认为人民是需要“领导”的，而随着他和人民一起抗日，一起解放全中国，这个立场进一步在细微处有了变化。  
+不过这时的毛泽东还是认为人民是需要“领导”的，他虽然和人民站在一起，但是心里是以引导者自居的，而随着他和人民一起抗日，一起解放全中国，这个立场进一步在细微处有了变化。  
 
 1941 年，在《农村调查》的序言里，毛泽东写到：
 
@@ -111,6 +111,8 @@ tags: []
 毛泽东：那是他来不及贪，当上一两年知县，我看他不大贪也小贪。现在我们不搞清官、贪官这件事了，搞文化大革命。搞教育界、文艺界、学术界、哲学界、史学界、出版界、新闻界。文艺界又分好多界，有戏剧界、电影界、音乐界、美术界、雕刻界；戏剧界又分京戏和几百种地方戏。  
 
 
+当时胡志明估计心里是无语的吧。  
+
 这时毛泽东认为反腐问题已经不优先了，而是要先搞文化大革命，打掉内部的修正主义者。  
 
 1966 年，林彪等人吹捧毛泽东，打算把毛泽东抬出来推进一些事，打击一些人。毛泽东在写给江青的信里袒露了自己的担忧。他说：  
@@ -124,7 +126,7 @@ tags: []
 
 > 工作组使起了阻碍革命的作用，清华、北大的工作组就是这样。我们不是正在制定关于文化大革命的文件吗我看文件上要写明只有行凶、杀人、放火、放毒的才叫反革命，写大字报、写反动标语的不能抓。有人写“拥护党中央，打倒毛泽东”，你抓他干什么？    
 
-可惜，这一次毛泽东错了。十年时间，一切都乱了。我想，造成这个悲剧的可能原因之一是，毛泽东虽然相信人民，但他晚年已经长期没有直接跟人民接触了。      
+可惜，这一次毛泽东错了。人心难测，一切失控了。十年时间，一切都乱了。我想，造成这个悲剧的可能原因之一是，毛泽东虽然相信人民，但他晚年已经长期没有直接跟人民接触了。      
 
 文革给中国最大的启示或许是，文革千万不能再重演。如果我们后人能记住这个教训，那先前的惨痛教训才多少有了点意义。        
 
