--- a/content/cn/2021-01-12-forthem.md
+++ b/content/cn/2021-01-12-forthem.md
@@ -130,6 +130,19 @@ tags: []
 
 文革给中国最大的启示或许是，文革千万不能再重演。如果我们后人能记住这个教训，那先前的惨痛教训才多少有了点意义。        
 
+毛泽东的党内政敌，负气出走，背叛中共的张国焘晚年旅居国外，同时也在观察中国的政治形势。他是一个对毛泽东和对中国形势都有深刻了解的人。文革爆发的时候，很多人都说毛泽东是利用文革进行权斗，对此，张国焘并不认同，他说：  
+
+> 作为一个农民社会主义者，毛泽东有一种对“平等”的渴望，一旦他发现自己建立的政权没有提供这些，甚至反而有走向反面的趋势时(也就是所谓的“变修”时)，毛便想采取措施来达到目的。   
+
+或许，最了解他的不是战友，而是敌人，这多少有些悲剧色彩吧。   
+
+建国初期，有位农民写信给人民日报，说感恩毛主席赐予大家的好光景。人民日报刊登了这封信，但是却被毛泽东严肃地批评，说人民可以这么说，但报纸不应该这么登。毛泽东说：  
+
+> 人民，特别是农民给了我们一切。农民的胜利果实不是某一个人恩赐的，而是他们通过斗争得来的。报纸不应该反映恩赐观点，而应该报道农民创造的一切。人民，特别是农民，创造了胜利，也创造了美好的生活。  
+
+毛泽东希望人民挺直脊梁，站起来，世上没有救世主，未来都是大家自己拼出来的。  
+
+
 毛泽东已经走了四十多年了，幸好他的文章还在。从毛泽东的文章里认识毛泽东，现在我多少有点明白为什么在他离开几十年后还有人去天安门找他诉委屈，为什么还有那么多人觉得他能保护人民。
 
 
