--- a/content/cn/2019-07-25-Van-Gogh.md
+++ b/content/cn/2019-07-25-Van-Gogh.md
@@ -92,7 +92,7 @@ tags: []
 
 ![wheatfield](https://upload.wikimedia.org/wikipedia/commons/f/f3/Vincent_van_Gogh_%281853-1890%29_-_Wheat_Field_with_Crows_%281890%29.jpg)  
 
-回到梵高三十岁那天，他写下一篇文章，《[我不是个怪人](http://www.1duan.com/item/1306)》。这篇文章我读了一遍又一遍，我不能想象当日梵高的心境，脑子里反复现出梵高的挣扎与反抗；这样的挣扎与反抗我在海子诗里见过，那首诗叫《面朝大海，春暖花开》。梵高似乎预测到了他的结局：
+回到梵高三十岁那天，他写下一篇文章，《[我不是个怪人](http://www.1duan.com/item/1306)》。这篇文章我读了一遍又一遍，我不能想象当日梵高的心境，脑子里反复现出梵高的挣扎与反抗；这样的挣扎与反抗我在海子诗里见过，那首诗叫《面朝大海，春暖花开》。潦倒中，梵高似乎预测到了自己的结局：
 
 > 我们不能指望从生活中得到我们明明知道得不到的东西。生命只是一个播种的季节，收获不在这里。  
 
