--- a/content/cn/2020-05-05-hope.md
+++ b/content/cn/2020-05-05-hope.md
@@ -30,7 +30,7 @@ tags: []
 
 效果一般，但是个好的开始。    
 
-既然效果一般，那福奇博士为啥在介绍临床试验结果时看起来那么乐观呢？我想，因为瑞德西韦是人民的希望。当初，瑞德西韦像一束阳光照进惊恐的中国人民心里，驱散了许多阴霾，现在处于疫情中心的美国人民也需要这道阳光。希望本是无所谓有，无所谓无的，重要的是人们相信它在。从这个角度说，不必纠结瑞德西韦到底是不是神药，重要的是它的光能继续照进人们心里。   
+既然效果一般，那福奇博士为啥在介绍临床试验结果时看起来那么乐观呢？我想，因为瑞德西韦是人民的希望。当初武汉乍逢巨变，瑞德西韦像一束阳光照进惊恐的中国人民心里，驱散了许多阴霾，现在处于疫情中心的美国人民也需要这道阳光。希望本是无所谓有，无所谓无的，重要的是人们相信它在。从这个角度说，不必纠结瑞德西韦到底是不是神药，重要的是它的光能继续照进人们心里。   
 
 疫情未来会怎样？谁也不清楚。控制不住病毒，被迫群体免疫？研发出疫苗，主动群体免疫？等待真正的特效药？我想，我们需要做好在较长的未来跟新冠病毒共存的准备。就算现在我们的防疫措施在世界范围内控制住了病毒扩散，但谁也不知道它是否会卷土从来；就算我们群体免疫了（不管是被动还是主动），但谁也不知道它是否会变异成新版本，导致免疫失效。    
 
