修改个别字句

--- a/content/cn/2021-01-12-forthem.md
+++ b/content/cn/2021-01-12-forthem.md
@@ -8,7 +8,7 @@ tags: []
 ---
 了解毛泽东是件困难的事情，不是因为毛泽东很复杂，而是因为环境太复杂。各种声音，把他捧上天的，把他踩到底的，或有意，或无意，都成了影响一个人了解毛泽东的噪音。毛泽东的影响有多大，这些噪音就有多响，生活在这些噪音里的人要认识毛泽东是件不易的事。   
 
-在北京上学的时候，每年国庆节我都会到天安门广场去待一会。也没有什么特别的目的，就是觉得既然在北京，就去看看。广场上有很多游客，也有警察巡逻，据说还有一些是便衣，但既然是便衣，我也就无从分辨了。记得那时进天安门广场要安检（或许现在也要吧），我过的时候一般都比较顺利，但是有些人的包会被检查得很彻底，特别是一些看起来像是乡村来的老人。有一次我看到一个警察从一个老的人包里翻出一堆资料，听到他们的对话，才意识到他们查的是来上访的人。上访为什么来天安门广场？我有点纳闷。后来经历了一件事，让我对这些来天安门广场“上访”的人有了些了解。那是一个下午，天有点偏暗，我在广场上逛了会儿，觉得差不多该坐地铁回学校了。走到一个离毛主席像不远的地方时，突然听到附近有骚动，转过身去，发现一群人正围着一个在说话的中年妇女，但我听不清她在说什么。附近有几个警察正往那群人那边跑过去，要逮她。她突然从包里拿出一块写了字的白布，举到头顶，哭喊到：“毛主席，您睁眼看看吧，您的人民正在被他们欺负啊。”很快，那名妇女就被警察带走了。这件事发生地突然，也消失得突然，整个过程一分钟不到，但那名妇女哭喊的声音像烙进了我的脑子里一样，这么多年了，想起来都异常清晰。妇女被带走后，聚起来的人大多也就散了，只有少数几个人还在附近议论。我抬头看着毛主席的像，他看着前方，好像也在注视着正在发生的事情。我不知那名妇女有什么冤屈，也不知道她说的“他们”是谁---我甚至不知道她是否真有冤屈，只是从她哭喊的声音里，听到了愤怒和委屈。   
+在北京上学的时候，每年国庆节我都会到天安门广场去待一会。也没有什么特别的目的，就是觉得既然在北京，就去看看。广场上有很多游客，也有警察巡逻，据说还有一些是便衣，但既然是便衣，我也就无从分辨了。记得那时进天安门广场要安检（或许现在也要吧），我过的时候一般都比较顺利，但是有些人的包会被检查得很彻底，特别是一些看起来像是乡村来的老人。有一次我看到一个警察从一个老人的包里翻出一堆资料，听到他们的对话，才意识到他们查的是来上访的人。上访为什么来天安门广场？我有点纳闷。后来经历了一件事，让我对这些来天安门广场“上访”的人有了些了解。那是一个下午，天有点偏暗，我在广场上逛了会儿，觉得差不多该坐地铁回学校了。走到一个离毛主席像不远的地方时，突然听到附近有骚动，转过身去，发现一群人正围着一个在说话的中年妇女，但我听不清她在说什么。附近有几个警察正往那群人那边跑过去，要逮她。她突然从包里拿出一块写了字的白布，举到头顶，哭喊到：“毛主席，您睁眼看看吧，您的人民正在被他们欺负啊。”很快，那名妇女就被警察带走了。这件事发生地突然，也消失得突然，整个过程一分钟不到，但那名妇女哭喊的声音像烙进了我的脑子里一样，这么多年了，想起来都异常清晰。妇女被带走后，聚起来的人大多也就散了，只有少数几个人还在附近议论。我抬头看着毛主席的像，他看着前方，好像也在注视着正在发生的事情。我不知那名妇女有什么冤屈，也不知道她说的“他们”是谁---我甚至不知道她是否真有冤屈，只是从她哭喊的声音里，听到了愤怒和委屈。   
 
 2016 年，有个学术会议在三亚举行，我和教授一起去参加。教授是个抓住一切机会了解世界各地植物的人，在去海南之前就跟我说他在会议间隙准备去三亚周边观察植物。于是我和他那几天除了开会就是坐的士去事先选好的地方去看植物。坐了几回的士，我就发现一个现象，三亚的的士里大多都挂着毛主席的像。我记得小时候家里有好些毛主席的像章，但稍微大点后就再没有见过了。在海南居然有这么多人还在挂，让我很意外。有一次是个年轻司机载我们，我看他的车里也有毛主席像，就问他为什么。他说，觉得毛主席能保佑大家平安，而且不仅是他们开车的，海南农村里很多人家里都供着毛主席。这回答让我有些哭笑不得，共产党可是讲无神论的啊。回到日本后，跟顾南聊起这事，顾南毫不惊奇，淡定地说她家里也供毛主席呢，跟观音菩萨他们供在一起，每年过年她妈妈还给毛主席上香呢。   
 
@@ -46,7 +46,7 @@ tags: []
 
 > 列位大家来听我说句白话。列位最不便益的是甚么，大家晓得吗？就是俗语说的，讲了写不得，写了认不得，有数算不得。都是个人，照这样看起来，岂不是同木石一样！所以，大家要求点知识，写得几个字，认得几个字，算得几笔数，方才是便益的。虽然如此，列位做工的人，又要劳动，又无人教授，如何能做到这样，真是不易得的事。现今有个最好的法子，就是我们第一师范办了一个夜学。今年上半年学生很多，列位中想有听过来的。这个夜学专为列位工人设的，从礼拜一起至礼拜五止，每夜上课两点钟；教的是写信、算账，都是列位自己时刻要用的。讲义归我们发给，并不要钱。夜间上课又于列位工作并无妨碍……快快来报名，莫再耽搁！
 
-这是毛泽东较早的一篇白话文章---给工人看的，当然要写大白话了。不知道毛泽东在写这篇文章的时候有没有想起几年前自己作的《商鞅徙木立信论》？在那篇文章的第二段，毛泽东感叹人民怎么这么傻，别人商鞅做为你好的事，你怎么不信他？但在这个招生广告中，毛泽东自己却也顾不得嫌弃民众的愚昧了，想方设法地哄他们来上课---老师免费，讲义免费，学了就有好处，快快来了，莫再耽搁！急迫的心情见于纸上。   
+这是毛泽东较早的一篇白话文章---给工人看的，当然要写大白话了。不知道毛泽东在写这篇文章的时候有没有想起几年前自己作的《商鞅徙木立信论》？在那篇文章的第二段，毛泽东感叹人民怎么这么傻，别人商鞅做为你好的事，你怎么不信他？但在这个招生广告中，毛泽东自己却也顾不得责备民众愚昧，而是想方设法，苦口婆心地来哄他们来上课---老师免费，讲义免费，学了就有好处，快快来了，莫再耽搁！急迫的心情见于纸上，活脱脱商鞅在世了。   
 
 由于担心工人们怕犯政府的戒严令，他还甚至专门写道： 
 
@@ -115,7 +115,7 @@ tags: []
 
 这时毛泽东认为反腐问题已经不优先了，而是要先搞文化大革命，打掉内部的修正主义者。  
 
-1966 年，林彪等人吹捧毛泽东，打算把毛泽东抬出来推进一些事，打击一些人。毛泽东在写给江青的信里袒露了自己的担忧。他说：  
+同样在 1966 年，林彪等人吹捧毛泽东，打算把毛泽东抬出来推进一些事，打击一些人。毛泽东在写给江青的信里袒露了自己的担忧。他说：  
 
 > 他（林彪）的一些提法，我总觉得不安。我历来不相信，我那几本小书，有那样大的神通。现在经他一吹，全党全国都吹起来了，真是王婆卖瓜，自卖自夸，我是被他们逼上梁山的，看来不同意他们不行了。在重大问题上，违心地同意别人，在我一生还是第一次......。我猜他们的本意，为了打鬼，借助钟馗。我就在二十世纪六十年代当了共产党的钟馗了。   
 
